highlight python builtins

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
     name = David Alexander
-    email = dave@sparkfire.net
+    email = sophistihip@gmail.com
 
 [core]
     pager = less -FRSX
